# STG_with_GPT

./: CMakeLists.txt  Project_Build.sh  README.md  generate_base_system.sh  generate_bullet.sh  generate_bullet_pattern.sh  generate_enemy.sh  generate_enemy_bullet.sh  generate_player.sh  generate_stage_loader.sh  setup_project_dirs.sh
assets/stages/: stage1.json
include/object/: Bullet.hpp  Enemy.hpp  EnemyBullet.hpp  Player.hpp
include/pattern/: BulletPattern.hpp  StraightShotPattern.hpp
include/scene/: GameScene.hpp  Scene.hpp  TitleScene.hpp
include/system/: Application.hpp  SceneManager.hpp  ScoreManager.hpp  Stage.hpp  StageLoader.hpp
src/: main.cpp
src/object/: Bullet.cpp  Enemy.cpp  EnemyBullet.cpp  Player.cpp
src/pattern/: StraightShotPattern.cpp
src/scene/: GameScene.cpp  TitleScene.cpp
src/system/: Application.cpp  SceneManager.cpp  ScoreManager.cpp  Stage.cpp  StageLoader.cpp
